# file-server

./: Cargo.toml  readme.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/protocol/: mod.rs  parser.rs  protocol.pest  protocol.rs
server/: Cargo.toml
server/src/: main.rs
