[package]
name = "client"
version = "0.1.0"
edition = "2018"


[dependencies]
core = { path = "../core" }
tokio = { version = "1.11.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
futures = "0.3.17"
env_logger = "0.9.0"
cursive = "0.16"
cursive-async-view = "^0"
log = "0.4.14"